@@ -177,6 +177,7 @@ Changelog
  * Fix: Allow input fields to scroll horizontally in Safari iOS (Thibaud Colas)
  * Fix: Ensure screen readers are made aware of page level messages added dynamically to the top of the page (Paarth Agarwal)
  * Fix: Fix `updatemodulepaths` command for Python 3.7 (Matt Westcott)
+ * Fix: Only show locale filter in choosers when i18n is enabled in settings (Matt Westcott)
 
 
 3.0.2 (xx.xx.xxxx) - IN DEVELOPMENT
